fixing bottom spacing

--- a/src/less/_site-layout.less
+++ b/src/less/_site-layout.less
@@ -104,6 +104,10 @@ html {
     }
 }
 
+.entry-content > :last-child {
+    margin-bottom: 3rem;
+}
+
 .entry-content > :last-child.alignfull {
     margin-bottom: 0;
 }
